# fly-io-rust-sample

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
