[package]
name = "fly-io-rust-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
tokio = { version = "1.19.2", features = ["full"] }
